z-index fix

--- a/src/views/UserProfile/style.module.css
+++ b/src/views/UserProfile/style.module.css
@@ -39,7 +39,7 @@
   background: linear-gradient(0deg, rgba(245,245,245,1) 0%, rgba(255,255,255,1) 100%);
   border-radius: 0 0 10px 10px;
   box-shadow: 0 5px 3px rgba(0 0 0 / .1);
-  z-index: 999;
+  z-index: 5;
 }
 
 .box {
